--- a/code-along.html
+++ b/code-along.html
@@ -3,7 +3,8 @@
     <head>
         <title>Code Along</title>
         <!-- 1. Link the style.css file here. -->
-
+        <link rel="stylesheet" href="style.css">
+        <meta charset ="UTF-8">
 
     </head>
     <body>
@@ -19,7 +20,7 @@
         <section id="about">
             <h2>About Dinosaurs</h2>
             <p>Dinosaurs are a diverse group of reptiles that appeared during the Mesozoic Era.</p>
-            <img src="https://img.freepik.com/premium-photo/dinosaur-tyrannosaurus-rex-with-powerful-jaws-open-ferocious-might-trex-generative-ai_634358-797.jpg" alt="Tyrannosaurus Rex" id="dino-image">
+            <img src="spain.jpg" alt="Tyrannosaurus Rex" id="dino-image">
         </section>
         <section id="types">
             <h2>Types of Dinosaurs</h2>
